Discourage use of SystemClock.setCurrentTimeMillis.
SystemClock.setCurrentTimeMillis has incorrect behavior in Robolectric.
This commit updates its docs and unit tests to prefer ShadowSystemClock.advanceBy
instead.

PiperOrigin-RevId: 703303044